--- a/ReactPractice/portfolio-practiceproject-react/src/index.css
+++ b/ReactPractice/portfolio-practiceproject-react/src/index.css
@@ -118,7 +118,7 @@ body {
   height: 2.5rem; /* h-10 = 40px */
   border: none; /* border */
   border-radius: 1.5rem; /* rounded-3xl */
-  background-color: #fdf8f8; /* bg-black */
+  background-color: #e22424; /* bg-black */
   padding-left: 0.375rem; /* pl-1.5 = 6px */
   justify-content: center;
   color: #000;
